--- a/django-app/static/css/style.css
+++ b/django-app/static/css/style.css
@@ -192,6 +192,10 @@ nav .logo-font {
     box-shadow: none !important;
 }
 
+.site-pill {
+    background-color: #247BA0;
+}
+
 .site-btn {
     background-color: #247BA0;
     border-color: #247BA0;
