--- a/django-app/transcribe/templates/transcribe/transcription_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_detail.html
@@ -12,7 +12,7 @@
     </div>
     <div class="row mb-5 gap-3">
         <div class="col">
-            <div class="d-flex flex-column mb-3 d-sm-none">
+            <div class="d-flex flex-column mb-5 d-sm-none">
                 <span class="text-muted subtitle-font font-size-90">
                     {% translate "Created" %}
                     {{ transcription_object.create_datetime|naturalday }}
@@ -22,7 +22,7 @@
                     {{ transcription_object.last_edit|naturalday }}
                 </span>
                 {% with days_to_expiration=transcription_object.days_to_expiration %}
-                        <span class="badge rounded-pill
+                        <span class="badge rounded-pill mt-2 w-50 text-wrap
                             {% if days_to_expiration > 5 %}
                                 site-pill
                             {% elif days_to_expiration > 2 %}
@@ -30,7 +30,7 @@
                             {% else %}
                                 bg-danger
                             {% endif %}
-                        t-2">
+                        ">
                             {% translate 'Expires in' %} {{ days_to_expiration }}
                             {% if days_to_expiration > 1 %}
                                 {% translate 'days' %}
@@ -68,7 +68,7 @@
                 </span>
                 <span>
                     {% with days_to_expiration=transcription_object.days_to_expiration %}
-                        <span class="badge rounded-pill
+                        <span class="badge rounded-pill mt-2
                             {% if days_to_expiration > 5 %}
                                 site-pill
                             {% elif days_to_expiration > 2 %}
@@ -76,7 +76,7 @@
                             {% else %}
                                 bg-danger
                             {% endif %}
-                        t-2">
+                        ">
                             {% translate 'Expires in' %} {{ days_to_expiration }}
                             {% if days_to_expiration > 1 %}
                                 {% translate 'days' %}
@@ -143,7 +143,7 @@
         <div class="row mt-4">
             <div class="col">
                 <p class="mt-5 font-6 mb-0 logo-font">{% translate 'Transcription will be available soon.' %}</p>
-                <hr id="processing-transcription-hr" class="site-red-text mt-0">
+                <hr id="processing-transcription-hr" class="site-red-text mt-0 d-none d-sm-block">
             </div>
         </div>
     {% endif %}
