django-app: changed site brand name

--- a/django-app/templates/base.html
+++ b/django-app/templates/base.html
@@ -39,7 +39,7 @@
     <!-- favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'img/ghost.png' %}">
 
-    <title>{% block title %}Ghost |{% endblock %}</title>
+    <title>{% block title %}Soulscribe |{% endblock %}</title>
 </head>
 
 <body>
