static, css: updated styles

--- a/django-app/static/css/style.css
+++ b/django-app/static/css/style.css
@@ -115,11 +115,11 @@ h5 {
 }
 
 .site-link-light {
-    color: #56595c;
+    color: #a1a1a1;
 }
 
 .site-link-light:hover {
-    color: #56595c;
+    color: #a1a1a1;
 }
 
 .link-decorated {
