templates, base: included footer

--- a/django-app/templates/base.html
+++ b/django-app/templates/base.html
@@ -51,7 +51,7 @@
     {% block content %}
     {% endblock %}
 </div>
-{#{% include 'footer.html' %}#}
+{% include 'footer.html' %}
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
