--- a/django-app/templates/base.html
+++ b/django-app/templates/base.html
@@ -66,6 +66,8 @@
 <!-- Bootstrap select JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 
+<script src="{% static 'js/iubenda.js' %}"></script>
+
 <!-- Optional JavaScript -->
 <script src="{% static 'js/base.js' %}"></script>
 {% block extra_javascript %}{% endblock %}
