templates, navbar: fixed bootstrap rule

--- a/django-app/templates/navbar.html
+++ b/django-app/templates/navbar.html
@@ -1,9 +1,9 @@
 {% load static %}
 
 <nav class="navbar mb-5 site-red-bg">
-    <div class="row w-100 ms-1 p-2">
+    <div class="row w-100 p-2">
         <div class="col d-flex align-items-center gap-4">
-            <img src="{% static 'img/ghost.png' %}" class="mb-2" style="width: 35px; height: auto;">
+            <img src="{% static 'img/ghost.png' %}" class="mb-2 ms-2" style="width: 35px; height: auto;">
             <span class="h1 logo-font font-9 text-white mb-0">Soulscribe</span>
         </div>
         <div class="col d-flex justify-content-end align-items-center pe-4">
