--- a/django-app/templates/home.html
+++ b/django-app/templates/home.html
@@ -26,6 +26,9 @@
         p {
             text-shadow: 2px 2px #e18484;
         }
+        #footer {
+            margin-top: 0 !important;
+        }
 
         @media (max-width: 991px) {
             #background-column {
